--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/forms": "^21.1.0",
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
+    "@hugeicons/core-free-icons": "^3.1.1",
     "lucide": "^0.575.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
